<resources>
    <string name="app_name"> NYC Pizza</string>
    <string name="talkback_button_check">isButton</string>
    <string name="talkback_custom_action">customAction</string>
    <string name="talkback_custom_action_place_order">place order</string>
    <string name="back">back</string>
    <string name="talkback_custom_action_go_to_previous_screen">go to previous screen</string>
    <string name="talkback_custom_action_add_or_change_toppings">add or change toppings</string>
    <string name="talkback_custom_action_change_cheese">change cheese </string>
    <string name="talkback_custom_action_change_size">change size</string>
    <string name="talkback_custom_action_change_sauce">change sauce</string>
    <string name="talkback_custom_action_order">order</string>
    <string name="talkback_custom_action_review_order">review order</string>
    <string name="talkback_custom_action_exit_and_place_order">exit and place order</string>
    <string name="talkback_custom_action_select">select</string>
    <string name="talkback_custom_action_unselect">un select</string>
    <string name="talkback_custom_topping_selected">%s selected</string>
    <string name="talkback_custom_topping_unselected">%s unselected</string>
    <string name="size">Size</string>
    <string name="large">Large</string>
    <string name="sauce">Sauce</string>
    <string name="toppings">Toppings</string>
    <string name="cheese">Cheese</string>
    <string name="review_order">Review Order</string>
    <string name="quantity">Quantity</string>
    <string name="done">Done</string>
    <string name="less">Less</string>
    <string name="more">More</string>

</resources>
