<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/customizeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/pepperoni_slice" />

    <RelativeLayout
        android:layout_below="@id/customizeImageView"
        android:id="@+id/SizeLayout"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sizeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/size"/>

        <TextView
            android:id="@+id/sizeValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="250dp"
            android:textSize="18sp"
            android:layout_toRightOf="@id/sizeTextView"
            android:text="@string/large" />

        <ImageView
            android:id="@+id/sizeChevron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/btn_chevron"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <View
        android:id="@+id/sizeView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/SizeLayout"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="#9BA4AA"
        android:layout_marginTop="5dp"/>


    <RelativeLayout
        android:layout_below="@id/sizeView"
        android:id="@+id/SauceLayout"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sauceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/sauce"/>

        <TextView
            android:id="@+id/sauceValueTextView"
            android:layout_toRightOf="@id/sauceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="230dp"
            android:textSize="18sp"
            android:text="Tomato"/>

        <ImageView
            android:id="@+id/sauceChevron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/btn_chevron"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:id="@+id/sauceView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/SauceLayout"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="#9BA4AA"/>


    <RelativeLayout
        android:layout_below="@id/sauceView"
        android:id="@+id/toppingsLayout"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/toppingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/toppings"/>

        <TextView
            android:id="@+id/toppingsValueTextView"
            android:layout_toRightOf="@id/toppingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="45dp"
            android:gravity="right"
            android:text=""/>

        <ImageView
            android:id="@+id/toppingsChevron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/btn_chevron"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>


    <Button
        android:id="@+id/reviewOrderButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:text="@string/review_order"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerInParent="true"
        android:textColor="#ffffff" />


</RelativeLayout>